# kr-trading-research

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/ops/: RUNTIME.md
docs/planning/: PROJECT_MEMORY.md
src/kr_research/bot/: __init__.py  notify.py
src/kr_research/core/: __init__.py  ai_store.py  config.py  heartbeat.py  (+2 more)
tests/: __init__.py  test_ai_combo_scheduler.py  test_ai_daily_digest.py  test_ai_forward_eval.py  test_ai_shadow_notify.py  test_ai_shadow_scheduler.py  test_ai_store.py  test_ai_universe_scan.py  test_backtest.py  test_backtest_worker.py  test_exits.py  test_flow.py  test_flow_universe.py  test_heartbeat.py  test_holidays.py  test_indicators.py  test_intraday_ohlcv.py  test_llm_shadow.py  test_market_data.py  test_metrics.py  test_monitor.py  test_naver_investor.py  test_naver_ohlcv.py  test_naver_universe.py  test_params.py  test_pipeline_schedule.py  test_pipeline_worker.py  test_regime_scheduler.py  test_screen_notify.py  test_screen_track.py  test_screen_universe.py  test_setups.py  test_spec.py  test_strategy.py  test_tracking.py  test_tuning.py  test_walkforward.py
tools/: ai_combo_scheduler.py  ai_daily_digest.py  ai_forward_eval.py  ai_shadow_notify.py  ai_shadow_scheduler.py  ai_universe_scan.py  backtest_worker.py  flow_universe.py  intraday_ohlcv.py  llm_shadow.py  monitor.py  naver_investor.py  naver_ohlcv.py  naver_universe.py  pipeline_schedule.py  pipeline_worker.py  regime_scheduler.py  screen_notify.py  screen_track.py  screen_track_eval.py  screen_universe.py
(+13 files in other folders)
