[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kr-trading-research"
# 버전 규칙: 태그를 만드는 커밋에서 이 값을 태그와 같게 범프(태그 = pyproject version).
# v0.1.1 까지는 이 값이 0.1.0 인 채 태그만 올라가 불일치했음 — 0.1.2 부터 일치.
version = "0.1.2"
description = "KR 주식 전략·지표·백테스트·스크리닝·AI 섀도 판단 — 브로커 무관 연구 레이어(kr-trading-bot/kr-trading-bot-toss 공용)"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "redis",
    "python-dotenv",
    "google-genai>=1.0.0",
    "exchange-calendars>=4.5",  # core/holidays.py 거래일 판정(XKRX) — 미설치 시 평일만 폴백(휴장일 미반영)
    "fakeredis",                # 테스트 전용(test_control_bus 등) — 프로덕션 미사용
]

[tool.setuptools.packages.find]
where = ["src"]
